@@ -6,10 +6,10 @@ import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Shell;
 import org.springframework.stereotype.Component;
 
-import com.kenstevens.stratinit.ui.shell.Window;
+import com.kenstevens.stratinit.ui.shell.StratInitWindow;
 
 @Component
-public class PrefsWindow implements Window {
+public class PrefsWindow implements StratInitWindow {
 	private Button liberatorOrConquererButton;
 	private Button showBuildingButton;
 	private Button playSoundsButton;
